# polycastracker

polymarket-watch/: .env.example  .gitignore  Makefile  Procfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
polymarket-watch/apps/bot/: main.py
polymarket-watch/db/migrations/: env.py
polymarket-watch/db/migrations/versions/: 20260104_01_initial_schema.py  20260104_02_signal_event_enhancements.py  20260104_03_alert_enhancements.py  20260104_04_backtest_results.py  20260107_05_wallet_stats.py  20260107_06_extend_external_id.py
polymarket-watch/polymarket_watch/: __init__.py  config.py  db.py  logging.py  models.py  state.py
polymarket-watch/scripts/: add_wallet_address.py  api_diag.py  api_order_test.py  backfill_trades.py  backfill_wallet_stats.py  clob_test.py  db_check.py  db_check_output.txt  evaluate_alerts.py  fix_alert_constraints.py  fix_env.py  init_db.py  migrate_db.py  replay.py  report_backtest.py  reset_db.py  trending_test.py
polymarket-watch/services/ingestion/: client.py  worker.py
polymarket-watch/services/notifier/: worker.py
polymarket-watch/services/profiling/: accuracy.py  worker.py
polymarket-watch/services/reporting/: worker.py
polymarket-watch/services/scoring/: aggregator.py  worker.py
polymarket-watch/services/signals/: engine.py  worker.py
polymarket-watch/tests/: test_early_positioning.py  test_replay.py  test_scoring.py
